# coh_npc_voices

./: .gitignore  CHANGELOG.md  INSTALLATION.md  LICENSE  README.md  Sidekick.bat  alembic.ini  aliases.json  all_npcs.json  amazon_polly_language_codes.json  build.bat  config.json.default  deptree.txt  dirty.bat  enable_all_win10_voices.ps1  fresh.bat  google_credential.json  make_migration.bat  presets.json  pyproject.toml  raw_data_condenser.py  requirements.txt  sidekick.spec  sidekick.xcf  voices.db  win_install.ps1  windows_installation.iss  windows_installation_3.iss
cnv/: logger.py  sidekick.py
cnv/chatlog/: npc_chatter.py  patterns.py
cnv/database/: db.py  models.py
cnv/effects/: __init__.py  bandpassfilter.py  bandstopfilter.py  base.py  bitcrush.py  chorus.py  clipping.py  compressor.py  delay.py  distortion.py  effects.py  gain.py  glitch.py  highpassfilter.py  highshelffilter.py  ladderfilter.py  lowpassfilter.py  normalize.py  pitchshift.py  reverb.py  ringmod.py  vocoder.py
cnv/engines/: __init__.py  amazonpolly.py  azure.py  base.py  disabled.py  elevenlabs.py  engines.py  googlecloud.py  openai.py  windowstts.py
cnv/lib/: gui.py  proc.py  settings.py
cnv/tabs/: automation.py  character.py  configuration.py  logview.py  patterns.py  translation.py  upgrade.py  voices.py
cnv/voices/: voice_builder.py  voice_editor.py
migrations/: env.py
migrations/versions/: 0e2640a2c350_.py  15ac1617d209_.py  56704d360a85_.py  5df82d8adcf0_create_migration.py  90328d2e3ef5_create_a_baseline_migrations.py  937d6b648884_add_damage_table.py  c1f376474050_.py
src/cnv/: logger.py  sidekick.py
src/cnv/chatlog/: npc_chatter.py
src/cnv/database/: db.py  models.py
src/cnv/effects/: effects.py
src/cnv/engines/: amazonpolly.py  azure.py  base.py  elevenlabs.py  engines.py  googlecloud.py  openai.py  windowstts.py
src/cnv/lib/: audio.py  proc.py  settings.py
src/cnv/tabs/: automation.py  character.py  configuration.py  voices.py
src/cnv/voices/: voice_builder.py  voice_editor.py
src/coh_npc_voices/: audio.py  db.py  effects.py  engines.py  models.py  npc.py  npc_chatter.py  settings.py  sidekick.py  voice_builder.py  voice_editor.py  voices.db
src/coh_npc_voices/effects/: __init__.py  effects.py
win_venv_mover/: Activate.ps1  activate.bat
