[project]
name = "cnv"
version = "2.0.0"
authors = [
  { name="Jason Kane" },
]
description = "A simple python program that lets you hear City of Heroes NPCs talk"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Environment :: Win32 (MS Windows)",
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: Microsoft :: Windows"
]
dependencies = [
    "alembic",
    "azure-cognitiveservices-speech",
    "colorama",
    "elevenlabs",
    "google-cloud-texttospeech",
    "openai",
    "google-auth-oauthlib",
    "matplotlib",
    "pyautogui",
    "pyfeather",
    "pyfiglet",
    "pypiwin32",
    "rich",
    "setuptools",
    "sqlalchemy-utils",
    "sqlalchemy",
    "tkinterweb",
    "translate",
    "tts @ git+https://github.com/DeepHorizons/tts@master#11cabe8",
    "voicebox-tts",
    "voicebox-tts[elevenlabs]",
    "voicebox-tts[google-cloud-tts]",
    "watchdog",
    "wheel",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project.urls]
Homepage = "https://github.com/jason-kane/coh_npc_voices"
Issues = "https://github.com/jason-kane/coh_npc_voices/issues"

[project.scripts]
coh_voices = "cnv.voice_editor:main"
sidekick = "cnv.sidekick:main"

[tool.hatch.metadata]
allow-direct-references = true